objects/Contact.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DAD_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchKey__c</fullName>
        <defaultValue>&apos;FALSE&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>MatchKey</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-NDA Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARMS_Role__c</fullName>
        <label>ARMS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>President/CEO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership Team</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARMS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ARMS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAD_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This is the field that pulls the data directly from the DAD. The other email field is for ARMS staff to populate if and when we have a better email address for a contact, so that the DAD does not overwrite that information.</inlineHelpText>
        <label>DAD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DAD_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the field that pulls the data directly from the DAD. The other email field is for ARMS staff to populate if and when we have a better work phone number for a contact, so that the DAD does not overwrite that information.</inlineHelpText>
        <label>DAD Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DAD_Roles__c</fullName>
        <label>DAD Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Chair</fullName>
                </value>
                <value>
                    <fullName>Affiliate CEO</fullName>
                </value>
                <value>
                    <fullName>Affiliate COO</fullName>
                </value>
                <value>
                    <fullName>Affiliate CFO/Head of Finance</fullName>
                </value>
                <value>
                    <fullName>Affiliate Medical Director</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Education</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Patient Services</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Training</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Human Resources</fullName>
                </value>
                <value>
                    <fullName>Affiliate Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Risk Management</fullName>
                </value>
                <value>
                    <fullName>Ancillary CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAD_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAD_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Used for integrating data from PPFA SQL DB extract to Salesforce.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DAD Person ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CASESAFEID__c</fullName>
        <description>Convert 15 digit Salesforce IDs to 18 digits, case insensitive IDs</description>
        <formula>CASESAFEID( Id )</formula>
        <label>CASESAFEID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAD_Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the field that pulls the data directly from the DAD. The other email field is for ARMS staff to populate if and when we have a better mobile number for a contact, so that the DAD does not overwrite that information.</inlineHelpText>
        <label>DAD Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credentials</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Facility ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to mass update all records to trigger workflow rules</description>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>Please select the value(s) that best defines the relationship between the contact and ARMS.</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAL - Pelvic Sim</fullName>
                </value>
                <value>
                    <fullName>CAL - Course Resource</fullName>
                </value>
                <value>
                    <fullName>CAL - Platform Support</fullName>
                </value>
                <value>
                    <fullName>CAL - Lead Admin</fullName>
                </value>
                <value>
                    <fullName>PBV</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>CAL - Admin</fullName>
                </value>
                <value>
                    <fullName>AASC Coordinator</fullName>
                </value>
                <value>
                    <fullName>Property Coordinator</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-NDA Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <inlineHelpText>Please select the value(s) that best defines the relationship between the contact and ARMS.</inlineHelpText>
        <label>XXX-Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARMS PelvicSim</fullName>
                </value>
                <value>
                    <fullName>ARMS Staff</fullName>
                </value>
                <value>
                    <fullName>Course Resource</fullName>
                </value>
                <value>
                    <fullName>CAL Affiliate Contact</fullName>
                </value>
                <value>
                    <fullName>CAL Platform Support</fullName>
                </value>
                <value>
                    <fullName>General - Affiliate</fullName>
                </value>
                <value>
                    <fullName>General - External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup created to make a filtered related list on the account to only show Active Contacts on Account</description>
        <label>Active Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Active Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Roles__c</fullName>
        <label>Contact Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head of Finance</fullName>
                </value>
                <value>
                    <fullName>Head of Development/Fundraising</fullName>
                </value>
                <value>
                    <fullName>Head of Education</fullName>
                </value>
                <value>
                    <fullName>Head of Human Resources</fullName>
                </value>
                <value>
                    <fullName>Head of Information Technology</fullName>
                </value>
                <value>
                    <fullName>Head of Marketing</fullName>
                </value>
                <value>
                    <fullName>Head of Patient Services</fullName>
                </value>
                <value>
                    <fullName>Head of Public Policy</fullName>
                </value>
                <value>
                    <fullName>Head of Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Head of Security</fullName>
                </value>
                <value>
                    <fullName>Medical Director</fullName>
                </value>
                <value>
                    <fullName>Primary Data Guru</fullName>
                </value>
                <value>
                    <fullName>Secondary Data Guru</fullName>
                </value>
                <value>
                    <fullName>Affiliate Lead Clinician</fullName>
                </value>
                <value>
                    <fullName>Affiliate Clinician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAD_Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAD_Address_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAD_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAD_Last_Sync__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DAD_Main_Line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Main Line</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Inactive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date this contact became inactive</inlineHelpText>
        <label>Date Inactive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_PPFA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this person an employee of PPFA?</inlineHelpText>
        <label>Employee PPFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Origin__c</fullName>
        <label>Contact Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletter List 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <inlineHelpText>Inactive means the person has left the Affiliation Organization</inlineHelpText>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Leave</fullName>
                </value>
                <value>
                    <fullName>temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAD_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAD_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup created to make a filtered related list on the account to only show Inactive Contacts on Account</description>
        <label>Inactive Lookup</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Contact_Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inactive Contacts</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEO_Contact_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CEO and CEO Executive Assistant have access to this field. System Admins can search this data, but it will not automatically be visible.</inlineHelpText>
        <label>XXX-CEO Contact Notes (private)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_CaseSafe_ID__c</fullName>
        <description>Convert 15 digit Salesforce IDs to 18 digits, case insensitive IDs</description>
        <formula>CASESAFEID( Id )</formula>
        <label>XXX-Contact CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Legacy Affiliate ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Assignment_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <description>08192019 LG@IC Duplicate and Assignment rules to run on Contacts where checked. Allows for flow and PB to uncheck and bypass rules.</description>
        <label>Run Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Affiliate ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Affiliate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Affiliate Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Leadership_Role__c</fullName>
        <inlineHelpText>If this contact serves on the leadership team of an organization, please indicate their role here. If not, please leave this field empty and choose their role from the &quot;Contact Roles&quot; field.</inlineHelpText>
        <label>Primary Leadership Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Chair</fullName>
                </value>
                <value>
                    <fullName>Affiliate CEO</fullName>
                </value>
                <value>
                    <fullName>Affiliate COO</fullName>
                </value>
                <value>
                    <fullName>Affiliate CFO/Head of Finance</fullName>
                </value>
                <value>
                    <fullName>Affiliate Medical Director</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Education</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Patient Services</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Training</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Human Resources</fullName>
                </value>
                <value>
                    <fullName>Affiliate Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>Affiliate Head of Risk Management</fullName>
                </value>
                <value>
                    <fullName>Ancillary CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>